updated print option

--- a/admin/pages/forgotPassword.html
+++ b/admin/pages/forgotPassword.html
@@ -21,7 +21,10 @@
             </div>
           </div>
         </form>
-        <a ui-sref="login">login</a><br>
+        <a ui-sref="login">login</a>
+        <div class="forgot-spin" ng-show="is_forgot">
+          <i class="fa fa-spinner fa-spin " aria-hidden="true"></i>
+        </div>
       </div>
       <div class="login-box-body" ng-if="is_token">
         <p class="login-box-msg">Reset Password</p>
