--- a/admin/pages/employeeDocuments.html
+++ b/admin/pages/employeeDocuments.html
@@ -77,7 +77,7 @@
                  <!-- <input type="text" class="form-control pull-right" id="datepicker" ng-model="buildingPlan.date"> -->
                  <!-- <div date-picker="dates.today" id="pickerMinDateDiv" min-date="minDate" view="date" min-view="hours" timezone="UTC" watch-direct-changes="true"></div> -->
                  <p class="input-group">
-                   <input type="text" class="form-control" uib-datepicker-popup ng-model="employeeDoc.ref_date" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+                   <input type="text" class="form-control"  placeholder="Current Date" uib-datepicker-popup ng-model="employeeDoc.ref_date" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
                    <span class="input-group-btn">
                      <button type="button" class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
                    </span>
@@ -188,8 +188,7 @@
               <!-- <button class="btn btn-default">Print</button> -->
             </div>
   					<div class="col-sm-6 text-right">
-  						<p>your faithfully</p>
-              <p></p>
+  						<p>Your's Faithfully</p>
   					</div>
   				</div>
   			</div>
