--- a/admin/pages/newemployee.html
+++ b/admin/pages/newemployee.html
@@ -15,7 +15,7 @@
           <div class="form-group" ng-class="{'has-error': (addemployee.emp_name.$invalid && addemployee.emp_name.$touched)}">
              <label for="inputEmail3" class="col-sm-3 control-label">Employee Name</label>
              <div class="col-sm-8">
-               <input type="text" class="form-control" name="emp_name" ng-model="employee.emp_name" placeholder="employee Name" required ng-pattern="/^(\D)+$/">
+               <input type="text" class="form-control" name="emp_name" ng-model="employee.emp_name" placeholder="Employee Name" required ng-pattern="/^(\D)+$/">
                <span class="help-block" ng-show="addemployee.emp_name.$error.required && addemployee.emp_name.$touched">Please enter employee name</span>
                <span class="help-block" ng-show="addemployee.emp_name.$error.pattern && addemployee.emp_name.$touched">Name should not be numeric</span>
              </div>
@@ -33,7 +33,7 @@
           <div class="form-group" ng-class="{'has-error': (addemployee.emp_village.$invalid && addemployee.emp_village.$touched)}">
             <label for="inputEmail3" class="col-sm-3 control-label">Village/Town</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" name="emp_village" ng-model="employee.emp_village" placeholder="village/town" required ng-pattern="/^(\D)+$/">
+              <input type="text" class="form-control" name="emp_village" ng-model="employee.emp_village" placeholder="Village/Town" required ng-pattern="/^(\D)+$/">
               <span class="help-block" ng-show="addemployee.emp_village.$error.required && addemployee.emp_village.$touched">Please enter village name</span>
               <span class="help-block" ng-show="addemployee.emp_village.$error.pattern && addemployee.emp_village.$touched">Name should not be numeric</span>
             </div>
@@ -41,7 +41,7 @@
           <div class="form-group" ng-class="{'has-error': (addemployee.emp_city.$invalid && addemployee.emp_city.$touched)}">
             <label for="inputEmail3" class="col-sm-3 control-label">city</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" name="emp_city" ng-model="employee.emp_city" placeholder="employee city" required ng-pattern="/^(\D)+$/">
+              <input type="text" class="form-control" name="emp_city" ng-model="employee.emp_city" placeholder="Employee City" required ng-pattern="/^(\D)+$/">
               <span class="help-block" ng-show="addemployee.emp_city.$error.required && addemployee.emp_city.$touched">Please enter city name</span>
               <span class="help-block" ng-show="addemployee.emp_city.$error.pattern && addemployee.emp_city.$touched">city should not be numeric</span>
             </div>
@@ -49,17 +49,17 @@
           <div class="form-group" ng-class="{'has-error': (addemployee.emp_po.$invalid && addemployee.emp_po.$touched)}">
             <label for="inputEmail3" class="col-sm-3 control-label">Po</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" name="emp_po" ng-model="employee.emp_po" placeholder="employee postal address" required ng-pattern="/^(\D)+$/">
+              <input type="text" class="form-control" name="emp_po" ng-model="employee.emp_po" placeholder="Employee Postal Address" required ng-pattern="/^(\D)+$/">
               <span class="help-block" ng-show="addemployee.emp_po.$error.required && addemployee.emp_po.$touched">Please enter po name</span>
-              <span class="help-block" ng-show="addemployee.emp_po.$error.pattern && addemployee.emp_po.$touched">city should not be numeric</span>
+              <span class="help-block" ng-show="addemployee.emp_po.$error.pattern && addemployee.emp_po.$touched">po should not be numeric</span>
             </div>
           </div>
           <div class="form-group" ng-class="{'has-error': (addemployee.emp_ps.$invalid && addemployee.emp_ps.$touched)}">
             <label for="inputEmail3" class="col-sm-3 control-label">Ps</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" name="emp_ps" ng-model="employee.emp_ps" placeholder="employee postal address" required ng-pattern="/^(\D)+$/">
-              <span class="help-block" ng-show="addemployee.emp_ps.$error.required && addemployee.emp_ps.$touched">Please enter po name</span>
-              <span class="help-block" ng-show="addemployee.emp_ps.$error.pattern && addemployee.emp_ps.$touched">city should not be numeric</span>
+              <input type="text" class="form-control" name="emp_ps" ng-model="employee.emp_ps" placeholder="Employee Police Station" required ng-pattern="/^(\D)+$/">
+              <span class="help-block" ng-show="addemployee.emp_ps.$error.required && addemployee.emp_ps.$touched">Please enter ps name</span>
+              <span class="help-block" ng-show="addemployee.emp_ps.$error.pattern && addemployee.emp_ps.$touched">ps should not be numeric</span>
             </div>
           </div>
           <div class="form-group" ng-class="{'has-error': (addemployee.emp_district.$invalid && addemployee.emp_district.$touched)}">
@@ -75,7 +75,7 @@
           <div class="form-group" ng-class="{'has-error': (addemployee.emp_pin.$invalid && addemployee.emp_pin.$touched)}">
             <label for="inputEmail3" class="col-sm-3 control-label">Pin</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" name="emp_pin" ng-model="employee.emp_pin"  ng-maxlength="6"  placeholder="employee pin no" required ng-pattern="/^[0-9]/">
+              <input type="text" class="form-control" name="emp_pin" ng-model="employee.emp_pin"  ng-maxlength="6"  placeholder="Employee Pin No" required ng-pattern="/^[0-9]/">
               <span class="help-block" ng-show="addemployee.emp_pin.$error.required && addemployee.emp_pin.$touched">Please enter pin code</span>
               <span class="help-block" ng-show="addemployee.emp_pin.$error.pattern && addemployee.emp_pin.$touched" ng-message="maxlength">pin number must be six digit and start from 7</span>
             </div>
@@ -83,7 +83,7 @@
           <div class="form-group" ng-class="{'has-error': (addemployee.emp_mobile.$invalid && addemployee.emp_mobile.$touched)}">
             <label for="inputPassword3" class="col-sm-3 control-label">Mobile</label>
             <div class="col-sm-8">
-                <input type="text" class="form-control" name="emp_mobile" ng-model="employee.mobile" placeholder="Mobile no." required ng-pattern="/^[0-9]{10,10}$/">
+                <input type="text" class="form-control" name="emp_mobile" ng-model="employee.mobile" placeholder="Mobile No." required ng-pattern="/^[0-9]{10,10}$/">
                 <span class="help-block" ng-show="addemployee.emp_mobile.$error.required && addemployee.emp_mobile.$touched">Please enter mobile number</span>
                 <span class="help-block" ng-show="addemployee.emp_mobile.$error.pattern && addemployee.emp_mobile.$touched">Invalid mobile number</span>
             </div>
@@ -91,7 +91,7 @@
           <div class="form-group" ng-class="{'has-error': (addemployee.emp_email.$invalid && addemployee.emp_email.$touched)}">
            <label for="inputPassword3" class="col-sm-3 control-label">Email(optional)</label>
            <div class="col-sm-8">
-               <input type="email" class="form-control" name="emp_email" ng-model="employee.email" placeholder="Email" required>
+               <input type="email" class="form-control" name="emp_email" ng-model="employee.email" placeholder="Email">
                <span class="help-block" ng-show="addemployee.email.$error.required && addemployee.email.$touched">Please enter mail id</span>
            </div>
          </div>
@@ -111,7 +111,7 @@
               <!-- <input type="text" class="form-control pull-right" id="datepicker" ng-model="buildingPlan.date"> -->
               <!-- <div date-picker="dates.today" id="pickerMinDateDiv" min-date="minDate" view="date" min-view="hours" timezone="UTC" watch-direct-changes="true"></div> -->
               <p class="input-group">
-                <input type="text" class="form-control" uib-datepicker-popup ng-model="employee.dob" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+                <input type="text" class="form-control" placeholder="Date Of Birth" uib-datepicker-popup ng-model="employee.dob" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
                 <span class="input-group-btn">
                   <button type="button" class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
@@ -124,7 +124,7 @@
               <!-- <input type="text" class="form-control pull-right" id="datepicker" ng-model="buildingPlan.date"> -->
               <!-- <div date-picker="dates.today" id="pickerMinDateDiv" min-date="minDate" view="date" min-view="hours" timezone="UTC" watch-direct-changes="true"></div> -->
               <p class="input-group">
-                <input type="text" class="form-control" uib-datepicker-popup ng-model="employee.doj" is-open="popup1.opened1" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+                <input type="text" class="form-control" uib-datepicker-popup ng-model="employee.doj" placeholder="Date Of Joining" is-open="popup1.opened1" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
                 <span class="input-group-btn">
                   <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
