--- a/admin/pages/users/UserProfile.html
+++ b/admin/pages/users/UserProfile.html
@@ -42,7 +42,7 @@
               <div class="form-group">
                 <label for="inputName" class="col-sm-2 control-label">User Name</label>
                 <div class="col-sm-10" ng-class="{'has-error': (updateProfile.user_name.$invalid && updateProfile.user_name.$touched)}">
-                  <input type="text" name="user_name" class="form-control"  placeholder="First Name" ng-model="profile.user_name" required ng-pattern="/^(\D)+$/">
+                  <input type="text" name="user_name" class="form-control"  placeholder="User Name" ng-model="profile.user_name" required ng-pattern="/^(\D)+$/">
                   <span class="help-block" ng-show="updateProfile.user_name.$error.required && updateProfile.user_name.$touched">Please enter user name</span>
                   <span class="help-block" ng-show="updateProfile.user_name.$error.pattern && updateProfile.user_name.$touched">Please enter valid name</span>
                 </div>
