change some style

--- a/admin/pages/employeeDocuments.html
+++ b/admin/pages/employeeDocuments.html
@@ -5,6 +5,8 @@
   </h1>
 </section>
 <section class="content" ng-init="loadEmployeeDocs()">
+    <div class="row">
+    <div class="col-sm-8 col-sm-offset-2">
     <div class="box box-info">
       <div class="" ng-if="!is_coverPage">
         <div class="box-header with-border">
@@ -199,5 +201,7 @@
   		</div>
   	</div>
 
+  </div>
+  </div>
   </div>
 </section>
