--- a/admin/pages/newemployee.html
+++ b/admin/pages/newemployee.html
@@ -5,7 +5,8 @@
   </h1>
 </section>
 <section class="content">
-  <div class="">
+  <div class="row">
+  <div class="col-sm-8 col-sm-offset-2">
     <div class="box box-info">
       <div class="box-header with-border">
         <h3 class="box-title">Add Employee</h3>
@@ -155,5 +156,6 @@
         <!-- /.box-footer -->
       </form>
     </div>
+  </div>
   </div>
 </section>
