--- a/admin/pages/employee_list.html
+++ b/admin/pages/employee_list.html
@@ -29,7 +29,7 @@
                 <th>DOB</th>
                 <th>DOJ</th>
                 <th>DOR</th>
-                <td>ULB</td>
+                <th>ULB</th>
                 <th>Status</th>
                 <th>Operation</th>
               </tr>
